	  buffered in memory.  From Macs N (2013-3-31).
	* Add CONFIG_CLOCK_MONOTONIC that case used to disable CLOCK_MONOTONIC
	  for a smaller footprint (2013-3-31).
	* sched/Kconfig:  Menu has gotten too long.  And another layer of
	  menuing in order to simplify this layer (2014-3-31).
	* arch/arm/src/sama5_boot.c:  Fix double mapping of SDRAM when executing
	  out of SDRAM.  In this case, the SDRAM was already mapping in
	  arm_head.S (2014-3-31).
	* arch/arm/src/sama5/chip/sam_dbgu.h:  Add SAMA5D3 DBGU definition
	  header file (2014-3031).
	* arch/arm/src/sama5/sam_dbgu.c and .h:  Add support for the SAMA5D3
	  DBGU (2014-4-1).
	* configs/sama5d3-xplained/nsh:  Configurations now use the DBGU for
	  the serial console (instead of USART1) (2014-4-1).
	* libc/stdio/lib_sccanf.c:  Use stroul() vs strol() with %u format
	  otherwise, range of values is restricted because of sign bit
	  from kfrolov (2014-4-2).
	* arch/arm/src/sama5/sam_boot.c, sam_irq.c, chip/sama5d3x_memorymap.h:
	  When running from SDRAM, vectors must lie in SRAM (2014-4-2).
	* arch/arm/src/armv7-a/arm_head.S and cache.h:  On start-up, make
	  certain the the MMU and caches are disabled (probably un-necessary)
	  (2014-4-2).
	* arch/arm/src/sama5/sam_boot.c:  If we have to copy vectors, then
	  make sure to clean the DCache to be sure that the copied vectors are
	  in the physical RAM (2014-4-2).
	* arch/arm/src/sama5/sam_irq.c:  After we modify the AXI MATRIX, make
	  sure to invalidate all caches and TLBs (probably un-necessary)
	  (2014-4-2).
	* arch/arm/src/sama5/sam_irq.c: Set the VBAR register to zero.  If
	  were started by a bootloader (vs. a RESET), then the VBAR register
	  may not be in its reset state (zero, 2014-4-3).
	* arch/arm/src/sama5/sam_boot.c, sam_irq.c, and chip/sama5d3x_memorymap.h:
	  When booting from SDRAM, don't relocated vectors to ISRAM.  Instead,
	  just set the VBAR register to address of the vectors in SDRAM.
